--- a/package.json
+++ b/package.json
@@ -26,10 +26,14 @@
     "chart.js": "^3.9.1",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.42",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
+    "react-live-clock": "^6.1.13",
+    "react-moment": "^1.1.3",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
