--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "PORT=80 react-scripts start",
+    "start": "export WDS_SOCKET_PORT=443 && PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -68,6 +68,7 @@
     ]
   },
   "devDependencies": {
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "dotenv": "^16.0.3"
   }
 }
