--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.9.1",
     "chartjs-plugin-streaming": "^2.0.0",
+    "crypto-hash": "^2.0.1",
     "formik": "^2.2.9",
     "leaflet": "^1.9.3",
     "moment": "^2.29.4",
